# brainsight

./: 404.html  README.md  index.html  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
brainsight/: __init__.py
brainsight/modules/: __init__.py  base_module.py  defaults.py  lfp.py  periodogram.py  spectrogram.py  utils.py
brainsight/plotting/: base_plotter.py  lfp.py  periodogram.py  spectrogram.py  utils.py
brainsight/types/: __init__.py  dataset.py  signal.py  utils.py
brainsight/utils/: mappings.py
dataset/: index.html
demo/: index.html
docs/: dataset.md  demo.md  index.md  install.md
docs/documentation/: dataset.md  index.md  synchronisation.md
docs/documentation/tutorials/: beta.md  index.md
docs/home/: index.md
docs/stylesheets/: extra.css
documentation/: index.html
documentation/dataset/: index.html
documentation/synchronisation/: index.html
documentation/tutorials/: index.html
documentation/tutorials/beta/: index.html
home/demo/: index.html
home/install/: index.html
install/: index.html
reference/SUMMARY/: index.html
reference/brainsight/__init__/: index.html
reference/brainsight/modules/__init__/: index.html
reference/brainsight/modules/base_module/: index.html
reference/brainsight/modules/defaults/: index.html
reference/brainsight/modules/lfp/: index.html
reference/brainsight/modules/periodogram/: index.html
reference/brainsight/modules/spectrogram/: index.html
reference/brainsight/modules/utils/: index.html
reference/brainsight/types/__init__/: index.html
scripts/: gen_doc_stubs.py
search/: search_index.json
(+3 files in other folders)
